# silo-forge

./: .gitignore  Makefile  NOTICE  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: activity.py  agent.py  approvals.py  boards.py  metrics.py  silo_blueprints.py  silo_provision_plans.py  silo_runtime.py  silo_spawn_requests.py  silos.py  task_execution_callbacks.py  task_execution_runs.py  tasks.py
backend/app/contracts/: activity.py  execution.py  generated_schemas.py  json_schema.py  queue.py  telemetry.py
backend/app/core/: auth.py  config.py  logging.py
backend/app/models/: __init__.py  activity_events.py  silo_roles.py  silo_runtime_operations.py  silo_spawn_requests.py  silos.py  task_execution_runs.py
backend/app/schemas/: activity_events.py  metrics.py  silo_spawn_requests.py  silos.py  task_execution_runs.py
backend/app/services/: activity_log.py  (+8 more)
backend/scripts/: seed_demo.py  sync_gateway_templates.py
backend/tests/: test_activity_api_rows.py  test_activity_contracts.py  test_agent_delete_main_agent.py  test_agent_provisioning_utils.py  test_approvals_lead_notifications.py  test_execution_contracts.py  test_lifecycle_reconcile_queue.py  test_metrics_runtime_execution.py  test_metrics_telemetry_ops.py  test_queue_contracts.py  test_queue_envelope_contracts.py  test_silo_blueprints.py  test_silo_blueprints_api.py  test_silo_detail_api.py  test_silo_persistence_api.py  test_silo_preview_api.py  test_silo_provision_plan_api.py  test_silo_runtime_api.py  test_silo_runtime_apply_service.py  test_silo_service_persistence.py  test_silo_spawn_requests_api.py  test_task_execution_dispatch.py  test_task_execution_runs_api.py  test_tasks_api_rows.py  test_telemetry_activity_bridge.py  test_telemetry_contracts.py  test_template_size_budget.py  test_webhook_dispatch.py
(+95 files in other folders)
